@@ -93,6 +93,7 @@ https://github.com/elastic/beats/compare/v6.4.0...6.x[Check the HEAD diff]
 
 - Add tag "truncated" to "log.flags" if incoming line is longer than configured limit. {pull}7991[7991]
 - Add haproxy module. {pull}8014[8014]
+- Add tag "multiline" to "log.flags" if event consists of multiple lines. {pull}7997[7997]
 
 *Heartbeat*
 
